# superpc

./: CMakeLists.txt  README.md  a.out  coords.hpp  differences.py  f.hpp  grid.vtk  l.hpp  main  main.cpp  out.txt  out_0.txt  vars.hpp  vtk.py
